--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
+        "materialize-css": "^0.100.2",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "roboto-fontface": "^0.9.0"
     }
 }
